--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,8 +23,8 @@
 
   <section id="login-form">
     <form action="/users/login" method="post">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <label for="emailUsername">Email/Username:</label>
+      <input type="text" id="emailUsername" name="emailUsername" required><br>
 
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
