--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -24,10 +24,10 @@
   <section id="signup-form">
     <form action="/users/signup" method="post">
       <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
+      <input type="text" id="username" name="username" required><br>
 
       <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <input type="email" id="email" name="email" required><br>
 
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
