--- a/views/viewUrl.ejs
+++ b/views/viewUrl.ejs
@@ -15,7 +15,7 @@
       <div class="logo"><a href="/">SHLINK</a></div>
       <ul>
         <li><a href="#features">Features</a></li>
-        <li><a href="/logout">Logout</a></li>
+        <li><a href="/url/logout">Logout</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -33,7 +33,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2024 URL Shortener. All rights reserved.</p>
+    <p>&copy; 2024 SHLINK All rights reserved</p>
   </footer>
 </body>
 </html>
