--- a/views/createUrl.ejs
+++ b/views/createUrl.ejs
@@ -25,8 +25,8 @@
 
   <section id="shorten-form">
     <form action="/url/shorten" method="post">
-      <label for="longUrl">Enter your long URL:</label>
-      <input type="text" id="longUrl" name="longUrl" placeholder="https://example.com" required>
+      <label for="longURL">Enter your long URL:</label>
+      <input type="text" id="longURL" name="longURL" placeholder="https://example.com" required>
 
       <!-- <label for="customUrl">Enter your long URL:</label>
       <input type="text" id="customUrl" name="customUrl" placeholder="https://abc.com" required> -->
