--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,6 +19,11 @@
       </header>
     <div class="container">
         <h1>Dashboard</h1>
+        <% if (user) { %>
+            <p><b>Welcome, <%= user.username %>!</b></p>
+            <% } else { %>
+            <p>Kindly login to view your shortened URLs.</p>
+            <% } %>
         <!-- shorten url -->
         <div class="link-item">
             <a href="/url/shorten">Create a URL</a>
